syntax = "proto2";

package vezel.novadrop.client;

import "protobuf-net/protogen.proto";

option csharp_namespace = "Vezel.Novadrop.Client";
option (.protobuf_net.fileopt).access = INTERNAL;

// TODO: protobuf-net is not currently AOT-friendly.

message ClientServerList
{
    repeated ClientServerInfo servers = 1;
    required fixed32 last_server_id = 2;
    required fixed32 unknown = 3;
}

message ClientServerInfo
{
    required fixed32 id = 1;
    required bytes raw_name = 2;
    required bytes category = 3;
    required bytes name = 4;
    required bytes queue = 5;
    required bytes population = 6;
    required fixed32 address = 7;
    required fixed32 port = 8;
    required fixed32 available = 9;
    required bytes unavailable_message = 10;
}
